<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="emoassist.activities.EmotionsActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        />
    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="100"
        android:title="@string/action_preferences"
        />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:title="@string/action_history"
        />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        />
</menu>

